# powerpoint-mcp-server

./: .gitignore  CHANGELOG.md  DEPLOY.md  DEPLOYMENT_STATUS.md  DEPLOY_FIXES.md  DIAGNOSTIC.md  Dockerfile  EXAMPLES.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  HTTP_API_EXPLANATION.md  MCP_SERVER_DEPLOYMENT.md  MCP_TOOLS_GUIDE.md  OPENAI_INTEGRATION.md  PROMPT_APPEL_OFFRE_SIA.md  QUICKSTART.md  README.md  README_OPENAI.md  SIA_TEMPLATE_GUIDE.md  TESTING_RESULTS.md  docker-compose.yml  fly.toml  openapi.json  openapi_optimized.json  presentation_demonstration.pptx  pyproject.toml  render.yaml  requirements.txt  requirements_original.txt  run_server.py  server.py  simple_test.py  test_all_tools.py  test_fastmcp_output.pptx  test_fastmcp_tools.py  test_mcp_connection.sh  test_simple_output.pptx  test_tools.sh
